# dragon-book-exercises

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
ch01/: ch01.md
ch01/1.1/: 1.1.md
ch01/1.3/: 1.3.md
ch01/1.6/: 1.6.md
ch02/: 2.1.md  CMakeLists.txt  ch02.md
ch02/2.2/: 2.2.md  CMakeLists.txt
ch02/2.2/img/: 2.2.1.b.tex  2.2.3.c.tex  2.2.3.d.tex  2.2.3.e.tex
ch02/2.3/: 2.3.md  CMakeLists.txt
ch02/2.3/img/: 2.3.1-mul.tex  2.3.1.tex  2.3.2-2.tex  2.3.2.tex  2.3.e.tex
ch02/2.4/: 2.4.md  CMakeLists.txt
ch02/2.4/src/: 2.4.1a.cpp  2.4.1b.cpp  2.4.1c.cpp
ch02/2.6/: 2.6.md  CMakeLists.txt
ch02/2.6/src/lexer/: Floating.java  Lexer.java  Num.java  Tag.java  Token.java  Word.java
ch02/2.6/src/lexer/test/: CommentTest.java  ComparisonTest.java  FloatingPointTest.java  LexerTest.java  SingleLineCommentTest.java  commentTest.java
ch02/2.8/: 2.8.md
ch02/P2.1/: p2_1.cpp
ch02/img/: 2.7-mul.tex  2.7.tex  2.8-2.tex  2.8.tex  Makefile
ch02/sec2.2/: sec2.2.md
ch02/sec2.2/img/: 2.2.3.d.tex  2.3.c.tex
ch02/sec2.3/: sec2.3.md
ch02/sec2.3/img/: 2.3.1.tex  2.8-2.tex
ch02/sec2.4/: sec2.4.md
ch02/sec2.4/src/: 2.4.1a.cpp  2.4.1b.cpp  2.4.1c.cpp
ch03/: ch03.md
ch03/3.1/: 3.1.md
ch03/3.2/: 3.2.md
ch03/3.3/: 3.3.md
ch03/3.5/: 3.5.md
ch03/src/: 3.4.c
cmake/: tex.cmake
