add_executable(2.4.1a src/2.4.1a.cpp)
target_link_libraries(2.4.1a gtest_main)
gtest_discover_tests(2.4.1a)
add_executable(2.4.1b src/2.4.1b.cpp)
target_link_libraries(2.4.1b gtest_main)
gtest_discover_tests(2.4.1b)
add_executable(2.4.1c src/2.4.1c.cpp)
target_link_libraries(2.4.1c gtest_main)
gtest_discover_tests(2.4.1c)
